Add icons install rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,12 @@ add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(tools)
 
 #################################################################################################################################################
+# Icons
+#################################################################################################################################################
+
+add_subdirectory(icons)
+
+#################################################################################################################################################
 # Unit tests
 #################################################################################################################################################
 
