Install MdtCMakeModules using CMake Package config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,10 +117,11 @@ add_subdirectory(libs/DeployUtils_Core)
 # include(MdtInstallQt5)
 
 #################################################################################################################################################
-# Tools
+# Tools and Helpers
 #################################################################################################################################################
 
 add_subdirectory(tools)
+add_subdirectory(cmake)
 
 #################################################################################################################################################
 # Icons
@@ -251,15 +252,6 @@ write_basic_package_version_file(
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
         COMPONENT ${PROJECT_NAME}
-)
-
-#################################################################################################################################################
-# Intall rules to ship Mdt CMake helper modules
-#################################################################################################################################################
-
-install(
-  DIRECTORY "${PROJECT_SOURCE_DIR}/cmake/modules"
-  DESTINATION share/cmake
 )
 
 #################################################################################################################################################
