--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -19,6 +19,7 @@ install(
   FILES
     "modules/MdtGenerateEnvScript.cmake"
     "modules/MdtDependenciesUtils.cmake"
+    "modules/MdtAddTranslations.cmake"
   DESTINATION "${MDT_CMAKE_MODULES_INSTALL_DIR}/modules"
   COMPONENT "${PROJECT_NAME}-cmake"
 )
