--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -65,3 +65,6 @@ addDeployUtilsTest("RPathTest")
 if(UNIX AND NOT APPLE)
   addDeployUtilsTest("RPathTestLinux")
 endif()
+addDeployUtilsTest("QmFileNameTest")
+addDeployUtilsTest("QmFileNameBenchmark")
+addDeployUtilsTest("TranslationInfoTest")
