--- a/libs/Expected/tests/CMakeLists.txt
+++ b/libs/Expected/tests/CMakeLists.txt
@@ -8,6 +8,11 @@ add_executable(mdtexpectedtest src/ExpectedTest.cpp)
 add_test(NAME MdtExpectedTest COMMAND mdtexpectedtest)
 target_link_libraries(mdtexpectedtest Expected Application_Core Qt5::Test)
 
+# MdtExpectedBenchmark
+add_executable(mdtexpectedbenchmark src/ExpectedBenchmark.cpp)
+add_test(NAME MdtExpectedBenchmark COMMAND mdtexpectedbenchmark)
+target_link_libraries(mdtexpectedbenchmark Expected Application_Core Qt5::Test)
+
 # Clang warns about explicit move that prevents copy elision.
 # For this test case, we need explicit move to check our code
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
