Working on translations

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -68,3 +68,4 @@ endif()
 addDeployUtilsTest("QmFileNameTest")
 addDeployUtilsTest("QmFileNameBenchmark")
 addDeployUtilsTest("TranslationInfoTest")
+addDeployUtilsTest("FindTranslationTest")
