In DeployUtils: implement MdtLibrary

--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCE_FILES
     Mdt/DeployUtils/TranslationInfo.cpp
     Mdt/DeployUtils/TranslationInfoList.cpp
     Mdt/DeployUtils/FindTranslation.cpp
+    Mdt/DeployUtils/MdtLibrary.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
