--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -69,3 +69,4 @@ addDeployUtilsTest("QmFileNameTest")
 addDeployUtilsTest("QmFileNameBenchmark")
 addDeployUtilsTest("TranslationInfoTest")
 addDeployUtilsTest("FindTranslationTest")
+addDeployUtilsTest("MdtLibraryTest")
