--- a/libs/DeployUtils_Core/src/CMakeLists.txt
+++ b/libs/DeployUtils_Core/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCE_FILES
     Mdt/DeployUtils/TranslationInfoList.cpp
     Mdt/DeployUtils/FindTranslation.cpp
     Mdt/DeployUtils/MdtLibrary.cpp
+    Mdt/DeployUtils/QtToolExecutableWrapper.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
