--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -70,3 +70,4 @@ addDeployUtilsTest("QmFileNameBenchmark")
 addDeployUtilsTest("TranslationInfoTest")
 addDeployUtilsTest("FindTranslationTest")
 addDeployUtilsTest("MdtLibraryTest")
+addDeployUtilsTest("QtToolWrapperTest")
