--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -71,3 +71,5 @@ addDeployUtilsTest("TranslationInfoTest")
 addDeployUtilsTest("FindTranslationTest")
 addDeployUtilsTest("MdtLibraryTest")
 addDeployUtilsTest("QtToolWrapperTest")
+addDeployUtilsTest("LconvertWrapperTest")
+target_compile_definitions(mdtdeployutils_lconvertwrappertest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
