Implement join QM files

--- a/libs/DeployUtils_Core/tests/CMakeLists.txt
+++ b/libs/DeployUtils_Core/tests/CMakeLists.txt
@@ -73,3 +73,4 @@ addDeployUtilsTest("MdtLibraryTest")
 addDeployUtilsTest("QtToolWrapperTest")
 addDeployUtilsTest("LconvertWrapperTest")
 target_compile_definitions(mdtdeployutils_lconvertwrappertest PRIVATE PREFIX_PATH="${CMAKE_PREFIX_PATH}")
+addDeployUtilsTest("TranslationTest")
