Fix installing translations dependning INSTALL prefix

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -22,6 +22,7 @@ install(
     "modules/MdtAddTranslations.cmake"
     "modules/MdtDeployUtils.cmake"
     "modules/MdtInstallCopyTargetsDependenciesScript.cmake.in"
+    "modules/MdtInstallDirs.cmake"
   DESTINATION "${MDT_CMAKE_MODULES_INSTALL_DIR}/modules"
   COMPONENT "${PROJECT_NAME}-cmake"
 )
