--- a/MdtPostInstall.cmake.in
+++ b/MdtPostInstall.cmake.in
@@ -12,24 +12,10 @@
 # For all platforms, QtPath.conf is also created.
 #
 
-message("Hello !")
-
-if(UNIX)
-  message("Unix")
-endif(UNIX)
-
-if(WIN32)
-  message("Windows")
-endif(WIN32)
-
-message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
-message("CMAKE_CURRENT_LIST_DIR: ${CMAKE_CURRENT_LIST_DIR}")
-
 # Set some CMake variable that are not available in script mode
-# TODO should be generated at compile time
-set(CMAKE_FIND_LIBRARY_PREFIXES "lib")
-set(CMAKE_FIND_LIBRARY_SUFFIXES ".so")
-set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+set(CMAKE_FIND_LIBRARY_PREFIXES "@CMAKE_FIND_LIBRARY_PREFIXES@")
+set(CMAKE_FIND_LIBRARY_SUFFIXES "@CMAKE_FIND_LIBRARY_SUFFIXES@")
+set(CMAKE_CXX_COMPILER "@CMAKE_CXX_COMPILER@")
 
 # On Linux, we will need patchelf later
 if(UNIX AND NOT APPLE)
@@ -76,9 +62,6 @@ find_program(QMAKE_EXECUTABLE NAMES qmake PATHS "${QT_BIN_PATH}" NO_DEFAULT_PATH
 if(NOT EXISTS "${QMAKE_EXECUTABLE}")
   message(FATAL_ERROR "Specified QT_PREFIX_PATH is not a Qt installation (could not find qmake)")
 endif()
-
-message("MDT_LIB_PATH: ${MDT_LIB_PATH}")
-message("QT_LIB_PATH: ${QT_LIB_PATH}")
 
 # On Linux, patch RPATH of Mdt libraries to find Qt
 if(UNIX AND NOT APPLE)
