Do not install icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ add_subdirectory(cmake)
 # Icons
 #################################################################################################################################################
 
-add_subdirectory(icons)
+# add_subdirectory(icons)
 
 #################################################################################################################################################
 # Unit tests
