Fix: not act RPATH for each call

--- a/MdtPostInstall.cmake.in
+++ b/MdtPostInstall.cmake.in
@@ -68,14 +68,7 @@ if(UNIX AND NOT APPLE)
   message(STATUS "Patching Mdt libraries")
   file(GLOB mdt_libraries LIST_DIRECTORIES false "${MDT_LIB_PATH}/libMdt*.so.[0-9].[0-9].[0-9]")
   foreach(mdt_library ${mdt_libraries})
-    # Get current RPATH
-    execute_process(COMMAND "${PATCHELF_EXECUTABLE}" "--print-rpath" "${mdt_library}" OUTPUT_VARIABLE rpath_raw RESULT_VARIABLE retval ERROR_VARIABLE error_string)
-    if( NOT (${retval} EQUAL 0) )
-      message(FATAL_ERROR "Running patchelf failed: ${error_string}")
-    endif()
-    string(STRIP "${rpath_raw}" rpath)
-    # Update with Qt location
-    set(rpath "${rpath}:${QT_LIB_PATH}")
+    set(rpath "\$ORIGIN:${QT_LIB_PATH}")
     execute_process(COMMAND "${PATCHELF_EXECUTABLE}" "--set-rpath" "${rpath}" "${mdt_library}" OUTPUT_VARIABLE rpath_raw RESULT_VARIABLE retval ERROR_VARIABLE error_string)
     if( NOT (${retval} EQUAL 0) )
       message(FATAL_ERROR "Running patchelf failed: ${error_string}")
