Install LICENSE file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,19 @@ if( NOT ("${install_prefix}" STREQUAL "/usr") )
 endif()
 
 #################################################################################################################################################
+# Licenses
+#################################################################################################################################################
+
+# For system wide installation,
+# installing licenses files is specific to the Linux distribution .
+if( NOT ("${install_prefix}" STREQUAL "/usr") )
+  install(
+    FILES "${CMAKE_SOURCE_DIR}/LICENSE"
+    DESTINATION "."
+  )
+endif()
+
+#################################################################################################################################################
 # Libraries
 #################################################################################################################################################
 
