Fix: also set RPATH for Mdt executables

--- a/MdtPostInstall.cmake.in
+++ b/MdtPostInstall.cmake.in
@@ -63,13 +63,22 @@ if(NOT EXISTS "${QMAKE_EXECUTABLE}")
   message(FATAL_ERROR "Specified QT_PREFIX_PATH is not a Qt installation (could not find qmake)")
 endif()
 
-# On Linux, patch RPATH of Mdt libraries to find Qt
+# On Linux, patch RPATH of Mdt libraries and executables to find Qt
 if(UNIX AND NOT APPLE)
   message(STATUS "Patching Mdt libraries")
   file(GLOB mdt_libraries LIST_DIRECTORIES false "${MDT_LIB_PATH}/libMdt*.so.[0-9].[0-9].[0-9]")
   foreach(mdt_library ${mdt_libraries})
     set(rpath "\$ORIGIN:${QT_LIB_PATH}")
     execute_process(COMMAND "${PATCHELF_EXECUTABLE}" "--set-rpath" "${rpath}" "${mdt_library}" OUTPUT_VARIABLE rpath_raw RESULT_VARIABLE retval ERROR_VARIABLE error_string)
+    if( NOT (${retval} EQUAL 0) )
+      message(FATAL_ERROR "Running patchelf failed: ${error_string}")
+    endif()
+  endforeach()
+  message(STATUS "Patching Mdt executables")
+  file(GLOB mdt_executables LIST_DIRECTORIES false "${MDT_BIN_PATH}/*")
+  foreach(mdt_executable ${mdt_executables})
+    set(rpath "\$ORIGIN/../lib:${QT_LIB_PATH}")
+    execute_process(COMMAND "${PATCHELF_EXECUTABLE}" "--set-rpath" "${rpath}" "${mdt_executable}" OUTPUT_VARIABLE rpath_raw RESULT_VARIABLE retval ERROR_VARIABLE error_string)
     if( NOT (${retval} EQUAL 0) )
       message(FATAL_ERROR "Running patchelf failed: ${error_string}")
     endif()
