Try to trigger Travis-CI/AppVeyor on tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 branches:
  only:
   - master
-  - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+  - /^v\d+\.\d+(\.\d+)?(-\S*)?$/  # Also build tags
 
 git:
  submodules: false
