--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ qttools/designer/plugin/Makefile.Release
 # Other files #
 ###############
 customdb
-.kdev4
+*.kdev4
 multiDiagTools.kdev4
 uml/bouml-6/multiDiagTools/cpp_gen/
 .kdev_include_paths
