--- a/libs/Translation_Widgets/tests/CMakeLists.txt
+++ b/libs/Translation_Widgets/tests/CMakeLists.txt
@@ -26,4 +26,5 @@ endfunction()
 
 #================= Tests ====================
 
+addTranslation_WidgetsTest("LanguageSelectionActionTest")
 addTranslation_WidgetsTest("LanguageSelectionMenuTest")
