Create FileSystem library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ add_subdirectory(libs/ItemModel)
 # add_subdirectory(libs/Sql)
 # add_subdirectory(libs/ItemEditor)
 # add_subdirectory(libs/ItemEditor_Sql)
+add_subdirectory(libs/FileSystem_Core)
 add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
