--- a/libs/Translation_Core/tests/CMakeLists.txt
+++ b/libs/Translation_Core/tests/CMakeLists.txt
@@ -32,3 +32,4 @@ addTranslation_CoreTest("LanguageCodeBenchmark")
 addTranslation_CoreTest("QmFileNameTest")
 addTranslation_CoreTest("QmFileNameBenchmark")
 addTranslation_CoreTest("TranslationInfoTest")
+addTranslation_CoreTest("FindTranslationTest")
