Implement Mdt::Translation::LanguageSelection

--- a/libs/Translation_Widgets/src/CMakeLists.txt
+++ b/libs/Translation_Widgets/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 # List of source files
 set(SOURCE_FILES
+  Mdt/Translation/LanguageSelection.cpp
   Mdt/Translation/LanguageSelectionMenu.cpp
   Mdt/Translation/LanguageSelectionActionList.cpp
 )
