--- a/libs/TestLib_Core/tests/CMakeLists.txt
+++ b/libs/TestLib_Core/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ endfunction()
 #================= Tests ====================
 
 addTestLib_CoreTest("FakeRootTest")
+addTestLib_CoreTest("CreateFileTest")
