--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,6 @@ add_subdirectory(libs/Numeric)
 add_subdirectory(libs/PlainText_Core)
 add_subdirectory(libs/ItemModel)
 # # add_subdirectory(libs/SerialPort)
-# add_subdirectory(libs/Sql)
 # add_subdirectory(libs/ItemEditor)
 # add_subdirectory(libs/ItemEditor_Sql)
 add_subdirectory(libs/TestLib_Core)
@@ -143,6 +142,7 @@ add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
 add_subdirectory(libs/Entity_Core)
+add_subdirectory(libs/Sql)
 
 # include(MdtInstallQt5)
 
