Create Entity Sql

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,8 +141,9 @@ add_subdirectory(libs/FileSystem_Core)
 add_subdirectory(libs/DeployUtils_Core)
 add_subdirectory(libs/Translation_Core)
 add_subdirectory(libs/Translation_Widgets)
-add_subdirectory(libs/Entity_Core)
 add_subdirectory(libs/Sql)
+add_subdirectory(libs/Entity_Core)
+add_subdirectory(libs/Entity_Sql)
 
 # include(MdtInstallQt5)
 
