--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -27,3 +27,4 @@ endfunction()
 #================= Tests ====================
 
 addEntity_CoreTest("FieldTest")
+addEntity_CoreTest("ReflectionTest")
