--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -27,5 +27,6 @@ endfunction()
 #================= Tests ====================
 
 addEntity_CoreTest("DefTest")
+addEntity_CoreTest("FieldAttributesTest")
 addEntity_CoreTest("FieldTest")
 addEntity_CoreTest("ReflectionTest")
