--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -55,3 +55,4 @@ addItemModelTest("RelationKeyTest")
 addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
+addItemModelTest("StlListModelTest")
