Work on STL list item model

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -56,3 +56,4 @@ addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
 addItemModelTest("StlListModelTest")
+addItemModelTest("StlListModelBenchmark")
