--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -55,5 +55,9 @@ addItemModelTest("RelationKeyTest")
 addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
+addItemModelTest("StlContainerTest")
+addItemModelTest("StlContainerBenchmark")
 addItemModelTest("StlListModelTest")
 addItemModelTest("StlListModelBenchmark")
+addItemModelTest("StlTableModelTest")
+addItemModelTest("StlTableModelBenchmark")
