--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 set(SOURCES_FILES
     src/TestBase.cpp
+    src/ModelInsertRowTest.cpp
 )
 
 add_library(mdtitemmodeltest SHARED ${SOURCES_FILES})
