Implement ItemModel ModelRemoveRowTest

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(SOURCES_FILES
     src/TestBase.cpp
     src/ModelInsertRowTest.cpp
+    src/ModelRemoveRowTest.cpp
 )
 
 add_library(mdtitemmodeltest SHARED ${SOURCES_FILES})
