--- a/libs/Entity_Core/tests/CMakeLists.txt
+++ b/libs/Entity_Core/tests/CMakeLists.txt
@@ -29,7 +29,9 @@ endfunction()
 addEntity_CoreTest("FieldAttributesTest")
 addEntity_CoreTest("FieldDefTest")
 addEntity_CoreTest("DefTest")
+addEntity_CoreTest("ValueAtTest")
 addEntity_CoreTest("DataTemplateTest")
+addEntity_CoreTest("DataRecordIteratorTest")
 
 addEntity_CoreTest("FieldTest")
 addEntity_CoreTest("ReflectionTest")
