ItemModel: implement STL record adapter for STL table model

--- a/libs/ItemModel/src/CMakeLists.txt
+++ b/libs/ItemModel/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCE_FILES
     Mdt/ItemModel/HeaderProxyModelItemList.cpp
     Mdt/ItemModel/HeaderProxyModel.cpp
     Mdt/ItemModel/StlContainer.cpp
+    Mdt/ItemModel/StlContainerIteratorAdapter.cpp
     Mdt/ItemModel/AbstractStlListModel.cpp
     Mdt/ItemModel/ReadOnlyStlListModel.cpp
     Mdt/ItemModel/EditableStlListModel.cpp
