--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -59,6 +59,7 @@ addItemModelTest("ForeignKeyProxyModelTest")
 addItemModelTest("HeaderProxyModelTest")
 addItemModelTest("StlContainerTest")
 addItemModelTest("StlContainerBenchmark")
+addItemModelTest("StlContainerIteratorAdapterTest")
 addItemModelTest("StlListModelTest")
 addItemModelTest("StlListModelBenchmark")
 addItemModelTest("StlTableModelTest")
