TestLib: implement get/setModelData (for item models)

--- a/libs/TestLib_Core/src/CMakeLists.txt
+++ b/libs/TestLib_Core/src/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(SOURCE_FILES
   Mdt/TestLib/FakeRoot.cpp
   Mdt/TestLib/CreateFile.cpp
+  Mdt/TestLib/ItemModel.cpp
 )
 
 find_package(Qt5 COMPONENTS Core)
